Import of SPEEVES/Apache-AuthzNetLDAP-0.07 from CPAN.
gitpan-cpan-distribution: Apache-AuthzNetLDAP
gitpan-cpan-version:      0.07
gitpan-cpan-path:         SPEEVES/Apache-AuthzNetLDAP-0.07.tar.gz
gitpan-cpan-author:       SPEEVES
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -19,3 +19,6 @@ Revision history for Perl extension Apache::AuthzNetLDAP.
 	  mod_perl installation mandatory.
 	- Added notice to Makefile.PL to warn about allowing 
 	  mod_perl2 install using ExtUtils::AutoInstall
+
+0.07 Wed Jul  02 2003
+	- Took care of some stray "return"s...
